# Semantic-Embeddings

./: .gitignore  README.md  init_summary.md  pyproject.toml
notebooks/: 01_explore_embeddings.ipynb  02_similarity_analysis.ipynb  03_chapter_similarity.ipynb  04_normalization_techniques.ipynb  05_embedding_visualisation.ipynb
outputs/: genre_network_interactive.html  umap_abttk3_genre.html  umap_baseline_genre.html  umap_localgenre_genre.html
scripts/: embed_bible.py  process_bible.py
src/sacred_semantics/: __init__.py
src/sacred_semantics/analysis/: similarity.py
src/sacred_semantics/corpus/: bcp.py  bible.py  books.py
src/sacred_semantics/pipeline/: embed.py
