[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sacred-semantics"
version = "0.1.0"
description = "Semantic embedding analysis of theological and liturgical texts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
search = ["faiss-cpu>=1.8"]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sacred_semantics"]
